tests/rosetta/out/Pascal/animate-a-pendulum.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/animate-a-pendulum.pas
animate-a-pendulum.pas(30,10) Error: Incompatible types: got "Double" expected "<procedure variable type of function(Variant):Double is nested;Register>"
animate-a-pendulum.pas(34,14) Error: Incompatible types: got "Double" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
animate-a-pendulum.pas(35,27) Error: Operator is not overloaded: "Variant" div "<procedure variable type of function(Variant):LongInt is nested;Register>"
animate-a-pendulum.pas(36,16) Error: Operator is not overloaded: "<procedure variable type of function(Variant):Double is nested;Register>" + "Variant"
animate-a-pendulum.pas(39,13) Error: Incompatible types: got "<procedure variable type of function(Variant):Double is nested;Register>" expected "Double"
animate-a-pendulum.pas(51,10) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Double is nested;Register>"
animate-a-pendulum.pas(55,14) Error: Incompatible types: got "Double" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
animate-a-pendulum.pas(56,27) Error: Operator is not overloaded: "Variant" div "<procedure variable type of function(Variant):LongInt is nested;Register>"
animate-a-pendulum.pas(57,16) Error: Operator is not overloaded: "<procedure variable type of function(Variant):Double is nested;Register>" + "Variant"
animate-a-pendulum.pas(60,13) Error: Incompatible types: got "<procedure variable type of function(Variant):Double is nested;Register>" expected "Double"
animate-a-pendulum.pas(85,14) Error: Operator is not overloaded: "Double" div "ShortInt"
animate-a-pendulum.pas(86,25) Error: Operator is not overloaded: "Double" div "Double"
animate-a-pendulum.pas(96) Fatal: There were 12 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
